// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a large icon 1`] = `
<div
  class="ProductIconContainer ProductIconContainer--large"
  data-test-id="cf-ui-navigation-icon"
>
  <svg
    class="ProductIcon ProductIcon--positive"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.083 22h-5c-.25 0-.416-.174-.416-.435v-5.652h-3.334v5.652c0 .261-.166.435-.416.435h-5c-.25 0-.417-.174-.417-.435V12.87c0-.261.167-.435.417-.435.25 0 .416.174.416.435v8.26H9.5v-5.652c0-.26.167-.434.417-.434h4.166c.25 0 .417.173.417.434v5.652h4.167v-7.826c0-.26.166-.434.416-.434.25 0 .417.174.417.434v8.261c0 .261-.167.435-.417.435z"
    />
    <path
      d="M21.583 12.87c-.083 0-.25 0-.333-.087L12 3.043l-9.25 9.74a.391.391 0 0 1-.583 0 .433.433 0 0 1 0-.61l9.5-10.086a.391.391 0 0 1 .583 0l9.583 10a.433.433 0 0 1 0 .609c0 .174-.166.174-.25.174zM18.25 6.783c-.25 0-.417-.174-.417-.435V3.739h-2.5c-.25 0-.416-.174-.416-.435 0-.26.166-.434.416-.434h2.917c.25 0 .417.173.417.434v3.044c0 .26-.167.435-.417.435z"
    />
  </svg>
</div>
`;

exports[`renders as a "positive" icon 1`] = `
<div
  class="ProductIconContainer ProductIconContainer--large"
  data-test-id="cf-ui-navigation-icon"
>
  <svg
    class="ProductIcon ProductIcon--positive"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.083 22h-5c-.25 0-.416-.174-.416-.435v-5.652h-3.334v5.652c0 .261-.166.435-.416.435h-5c-.25 0-.417-.174-.417-.435V12.87c0-.261.167-.435.417-.435.25 0 .416.174.416.435v8.26H9.5v-5.652c0-.26.167-.434.417-.434h4.166c.25 0 .417.173.417.434v5.652h4.167v-7.826c0-.26.166-.434.416-.434.25 0 .417.174.417.434v8.261c0 .261-.167.435-.417.435z"
    />
    <path
      d="M21.583 12.87c-.083 0-.25 0-.333-.087L12 3.043l-9.25 9.74a.391.391 0 0 1-.583 0 .433.433 0 0 1 0-.61l9.5-10.086a.391.391 0 0 1 .583 0l9.583 10a.433.433 0 0 1 0 .609c0 .174-.166.174-.25.174zM18.25 6.783c-.25 0-.417-.174-.417-.435V3.739h-2.5c-.25 0-.416-.174-.416-.435 0-.26.166-.434.416-.434h2.917c.25 0 .417.173.417.434v3.044c0 .26-.167.435-.417.435z"
    />
  </svg>
</div>
`;

exports[`renders as a "white" icon 1`] = `
<div
  class="ProductIconContainer ProductIconContainer--large"
  data-test-id="cf-ui-navigation-icon"
>
  <svg
    class="ProductIcon ProductIcon--white"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.083 22h-5c-.25 0-.416-.174-.416-.435v-5.652h-3.334v5.652c0 .261-.166.435-.416.435h-5c-.25 0-.417-.174-.417-.435V12.87c0-.261.167-.435.417-.435.25 0 .416.174.416.435v8.26H9.5v-5.652c0-.26.167-.434.417-.434h4.166c.25 0 .417.173.417.434v5.652h4.167v-7.826c0-.26.166-.434.416-.434.25 0 .417.174.417.434v8.261c0 .261-.167.435-.417.435z"
    />
    <path
      d="M21.583 12.87c-.083 0-.25 0-.333-.087L12 3.043l-9.25 9.74a.391.391 0 0 1-.583 0 .433.433 0 0 1 0-.61l9.5-10.086a.391.391 0 0 1 .583 0l9.583 10a.433.433 0 0 1 0 .609c0 .174-.166.174-.25.174zM18.25 6.783c-.25 0-.417-.174-.417-.435V3.739h-2.5c-.25 0-.416-.174-.416-.435 0-.26.166-.434.416-.434h2.917c.25 0 .417.173.417.434v3.044c0 .26-.167.435-.417.435z"
    />
  </svg>
</div>
`;

exports[`renders the component 1`] = `
<div
  class="ProductIconContainer ProductIconContainer--medium"
  data-test-id="cf-ui-navigation-icon"
>
  <svg
    class="ProductIcon ProductIcon--positive"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.083 22h-5c-.25 0-.416-.174-.416-.435v-5.652h-3.334v5.652c0 .261-.166.435-.416.435h-5c-.25 0-.417-.174-.417-.435V12.87c0-.261.167-.435.417-.435.25 0 .416.174.416.435v8.26H9.5v-5.652c0-.26.167-.434.417-.434h4.166c.25 0 .417.173.417.434v5.652h4.167v-7.826c0-.26.166-.434.416-.434.25 0 .417.174.417.434v8.261c0 .261-.167.435-.417.435z"
    />
    <path
      d="M21.583 12.87c-.083 0-.25 0-.333-.087L12 3.043l-9.25 9.74a.391.391 0 0 1-.583 0 .433.433 0 0 1 0-.61l9.5-10.086a.391.391 0 0 1 .583 0l9.583 10a.433.433 0 0 1 0 .609c0 .174-.166.174-.25.174zM18.25 6.783c-.25 0-.417-.174-.417-.435V3.739h-2.5c-.25 0-.416-.174-.416-.435 0-.26.166-.434.416-.434h2.917c.25 0 .417.173.417.434v3.044c0 .26-.167.435-.417.435z"
    />
  </svg>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="ProductIconContainer ProductIconContainer--medium my-extra-class"
  data-test-id="cf-ui-navigation-icon"
>
  <svg
    class="ProductIcon ProductIcon--positive my-extra-class"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.083 22h-5c-.25 0-.416-.174-.416-.435v-5.652h-3.334v5.652c0 .261-.166.435-.416.435h-5c-.25 0-.417-.174-.417-.435V12.87c0-.261.167-.435.417-.435.25 0 .416.174.416.435v8.26H9.5v-5.652c0-.26.167-.434.417-.434h4.166c.25 0 .417.173.417.434v5.652h4.167v-7.826c0-.26.166-.434.416-.434.25 0 .417.174.417.434v8.261c0 .261-.167.435-.417.435z"
    />
    <path
      d="M21.583 12.87c-.083 0-.25 0-.333-.087L12 3.043l-9.25 9.74a.391.391 0 0 1-.583 0 .433.433 0 0 1 0-.61l9.5-10.086a.391.391 0 0 1 .583 0l9.583 10a.433.433 0 0 1 0 .609c0 .174-.166.174-.25.174zM18.25 6.783c-.25 0-.417-.174-.417-.435V3.739h-2.5c-.25 0-.416-.174-.416-.435 0-.26.166-.434.416-.434h2.917c.25 0 .417.173.417.434v3.044c0 .26-.167.435-.417.435z"
    />
  </svg>
</div>
`;
